--- a/Synthetic Sonic Log Generation Starter_Yu 2_27_2020.ipynb
+++ b/Synthetic Sonic Log Generation Starter_Yu 2_27_2020.ipynb
@@ -831,9 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1153,9 +1151,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "pdda",
    "language": "python",
-   "name": "python36"
+   "name": "pdda"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1167,9 +1165,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
