--- a/nb/SPWLA_PDDA_2020_Contest_BDowdell.ipynb
+++ b/nb/SPWLA_PDDA_2020_Contest_BDowdell.ipynb
@@ -968,7 +968,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a gap in the data between approximately 5,000 ft and 14,000 ft.  There also appears to be some invalid data in the CNC data."
+    "There is a gap in the data between approximately 5,000 ft and 14,000 ft.  There also appears to be some invalid spiky data on various logs."
    ]
   },
   {
