--- a/nb/SPWLA_PDDA_2020_Contest_BDowdell-v3.ipynb
+++ b/nb/SPWLA_PDDA_2020_Contest_BDowdell-v3.ipynb
@@ -2666,9 +2666,24 @@
     "* PE has moderately positive correlation with CNC, DTC, & DTS\n",
     "* ZDEN has a high negative correlation with CNC, DTC, & DTS, and mild negative correlation with CAL, GR, & PE\n",
     "\n",
-    "The recommendation going forward will be to drop CAL & HRM from the set of inputs.\n",
+    "The recommendation going forward will be to drop CAL & HRM from the set of inputs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <a name=\"imputing\"></a> 5. Imputing Missing Data\n",
     "\n",
-    "**Create df_subset:**\n",
+    "Back to [top](#top)\n",
+    "\n",
+    "Before proceeding to estimating DTC & DTS, if we want to use as much of the data as possible, we need to attempt to estimate the bad values for PE as well as missing DTC & DTS.\n",
+    "\n",
+    "1. [5a. PE Curve Estimation](#fe-pe)\n",
+    "1. [5b. DTC Approximation](#fe-dtc)\n",
+    "1. [5c. DTS Approximation](#fe-dts)\n",
+    "\n",
+    "**But first, create df_subset which will be our starting point for imputing values**\n",
     "\n",
     "1. Drop 'CAL' & 'HRM'\n",
     "\n",
@@ -3174,228 +3189,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. <a name=\"imputing\"></a> Imputing missing values\n",
-    "\n",
-    "Back to [top](#top)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First, let's replace all bad values in PE starting at index 19939 to the end with NaN's"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_subset['PE'].iloc[19939:] = np.nan"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_well_curves(df_subset)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ok, looks good."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**So.**\n",
-    "\n",
-    "We will use a function *consecutive_nans* to find the gaps we want to fill with imputed values.  *consecutive_nans* searches for consecutive NaN values in a column above a specified threshold and returns a range that starts at the beginning of the consecutive NaNs and ends at the last NaN.\n",
-    "\n",
-    "Once these values are spliced in, interpolate to fill any remaining *small* gaps in each column."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_subset_imputed = df_subset.copy()\n",
-    "\n",
-    "dtc_nans = consecutive_nans(df_subset.index, df_subset['DTC'], threshold=100)\n",
-    "df_subset_imputed['DTC'].iloc[dtc_nans] = df_subset_imp_br['DTC'].iloc[dtc_nans].rolling(window=27, center=True).max().rolling(window=101, center=True).median()\n",
-    "\n",
-    "dts_nans = consecutive_nans(df_subset.index, df_subset['DTS'], threshold=100)\n",
-    "df_subset_imputed['DTS'].iloc[dts_nans] = df_subset_imp_br['DTS'].iloc[dts_nans].rolling(window=27, center=True).max().rolling(window=101, center=True).median()\n",
-    "\n",
-    "pe_nans = consecutive_nans(df_subset.index, df_subset['PE'], threshold=1000)\n",
-    "df_subset_imputed['PE'].iloc[pe_nans] = df_subset_imp_br['PE'].iloc[pe_nans].rolling(window=27, center=True).max().rolling(window=101, center=True).median()\n",
-    "\n",
-    "df_subset_imputed = df_subset_imputed.interpolate(limit_area='inside')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_well_curves(df_subset_imputed)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qc_curve_filt(df_subset.interpolate(limit_area='inside'), df_subset_imputed)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The imputed values for DTC & DTS look plausible.\n",
-    "\n",
-    "The imputed values for PE seem off trend and too high."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "petro_plot(df_subset_imputed['GR'], df_subset_imputed['HRD'], df_subset_imputed['CNC'], df_subset_imputed['ZDEN'], df_subset_imputed['PE'], df_subset_imputed['DTC'], df_subset_imputed['DTS'])\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**We now have a continuous data set for each curve.**\n",
-    "\n",
-    "Visually, the curves are appealing and look like data that we might receive from a petrophysicist upon completion of log edit & QC.\n",
-    "\n",
-    "**A few thoughts and observations:**\n",
-    "\n",
-    "  1. The imputed values are noticeably smoother than the real values.  Will this affect model performance?\n",
-    "  \n",
-    "  1. DTS imputed values are not as stable as DTC.\n",
-    "  \n",
-    "  1. Overall, the data does not look overly-processed.  Hopefully enough variation is preserved at this point by using n-standard deviation from the median filters to build a robust model.\n",
-    "    \n",
-    "  1. The estimated section of PE seems too high in value?  Are these estimated values reliable?  Maybe a different method needs to be used for PE.\n",
-    "    \n",
-    "  1. Aside from PE, these curves are ready for model fitting.  If the model does not perform well, we can:\n",
-    "    \n",
-    "      a. Splice the filtered imputed sections back into the previous iteration of filtered curves and use these for model building,\n",
-    "      \n",
-    "      b. Use interpolated trend for DTC & DTS instead of imputed values, or\n",
-    "       \n",
-    "      c. Abandon the data-driven solution for imputing & estimating missing values for traditional physics-based rock property model approaches.\n",
-    "      \n",
-    "**Let's continue by comparing where we started the imputation process to where we finished:**\n",
-    "\n",
-    "1. Raw curves with minimal edits for obviously bad values *vs.* Median-Filtered Curves\n",
-    "\n",
-    "1. Median-Filtered Curves *vs.* Real data with imputed data spliced in + Additional Median-Filtering\n",
-    "\n",
-    "1. Real data with imputed data spliced in *vs.* Real data with imputed data spliced in + Additional Median-Filtering"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qc_curve_filt(df_w1.drop(labels=['CAL','HRM'], axis=1, inplace=False), df_subset)\n",
-    "qc_curve_filt(df_subset, df_subset_imputed)\n",
-    "qc_curve_filt(df_w1.drop(labels=['CAL','HRM'], axis=1, inplace=False), df_subset_imputed)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_rhomaa_umaa(df_subset_imputed['PE'], df_subset_imputed['ZDEN'], df_subset_imputed['CNC'])\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The imputed PE values are very obvious here.  The RHOMAA-UMAA plot suggests this section is calcitic, but plots outside of the calcite endmember.  I'm not very trusting of these values at this point ..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_data_distributions(df_subset_imputed.dropna())\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Compare each feature to the response variables, DTC & DTS**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_features = df_subset_imputed.columns.tolist()\n",
-    "predictors = [x for x in all_features if x not in ['DTC', 'DTS']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for col in predictors:\n",
-    "    ax = compare_curves(df_subset_imputed[col], df_subset_imputed['DTC'], df_subset_imputed['DTS'])\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Gameplan:**\n",
     "\n",
     "1. Estimate missing PE for samples beyond 20000 and splice in\n",
@@ -3407,22 +3200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a name=\"fe\"></a> 6. Feature Engineering\n",
-    "\n",
-    "Back to [top](#top)\n",
-    "\n",
-    "Before proceeding to estimating DTC & DTS, if we want to use as much of the data as possible, we need to attempt to estimate the bad values for PE as well as missing DTC & DTS.\n",
-    "\n",
-    "1. [6a. PE Curve Estimation](#fe-pe)\n",
-    "1. [6b. DTC Approximation](#fe-dtc)\n",
-    "1. [6c. DTS Approximation](#fe-dts)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### <a name=\"fe-pe\"></a> 6a. Feature Engineering - PE Curve Estimation\n",
+    "### <a name=\"fe-pe\"></a> 5a. Feature Engineering - PE Curve Estimation\n",
     "\n",
     "Back to [top](#top)\n",
     "\n",
@@ -4195,9 +3973,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a name=\"fe-dtc\"></a> 6b. Feature Engineering - DTC Approximation\n",
+    "### <a name=\"fe-dtc\"></a> 5b. Feature Engineering - DTC Approximation\n",
     "\n",
-    "back to [Feature Engineering](#fe)\n",
+    "back to [Imputation Head](#imputing)\n",
     "\n",
     "back to [top](#top)\n",
     "\n",
@@ -4537,9 +4315,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a name=\"fe-dts\"></a> 6c. Feature Engineering - DTS Approximation\n",
+    "### <a name=\"fe-dts\"></a> 5c. Feature Engineering - DTS Approximation\n",
     "\n",
-    "back to [Feature Engineering](#fe)\n",
+    "back to [Imputation Head](#imputing)\n",
     "\n",
     "back to [top](#top)\n",
     "\n",
