--- a/nb/SPWLA_PDDA_2020_Contest_BDowdell-v3.ipynb
+++ b/nb/SPWLA_PDDA_2020_Contest_BDowdell-v3.ipynb
@@ -3222,7 +3222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.pairplot(df_subset_interp[['CNC','PE','ZDEN']])"
+    "sns.pairplot(df_subset_interp[['CNC','GR','HRD', 'PE','ZDEN']])"
    ]
   },
   {
