--- a/nb/SPWLA_PDDA_2020_Contest_BDowdell-v2.ipynb
+++ b/nb/SPWLA_PDDA_2020_Contest_BDowdell-v2.ipynb
@@ -122,7 +122,7 @@
     "from sklearn.decomposition import PCA\n",
     "\n",
     "# Clustering Models\n",
-    "from sklearn.cluster import KMeans, AgglomerativeClustering, DBSCAN\n",
+    "from sklearn.cluster import KMeans, DBSCAN\n",
     "\n",
     "# Evaluation Metrics\n",
     "from sklearn.metrics import mean_squared_error, r2_score, make_scorer\n",
@@ -134,8 +134,7 @@
     "from yellowbrick.features import Rank1D, Rank2D\n",
     "from yellowbrick.features import PCA as PCA_yb\n",
     "from yellowbrick.target import FeatureCorrelation\n",
-    "from yellowbrick.model_selection import FeatureImportances, ValidationCurve\n",
-    "from yellowbrick.regressor import ResidualsPlot, PredictionError"
+    "from yellowbrick.model_selection import FeatureImportances, ValidationCurve"
    ]
   },
   {
@@ -202,38 +201,6 @@
     "        axes[-1,-n_blank].axis('off')\n",
     "    for ax, col in zip(axes.flatten(), df.columns.tolist()):\n",
     "        ax.hist(df[col])\n",
-    "        if 'HR' in col:\n",
-    "            ax.set_xscale('log')\n",
-    "        ax.set_title('{} Histogram'.format(col))\n",
-    "    plt.tight_layout()\n",
-    "    return fig"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Helper function plot data CDF's"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_data_cdf(df):\n",
-    "    \"\"\"Plot cumulative distribution function of each curve\n",
-    "    \n",
-    "    Parameters:\n",
-    "    df (pandas.DataFrame) : Input data frame containing log curves\n",
-    "    \n",
-    "    Returns:\n",
-    "    matplotlib.figure.Figure\n",
-    "    \"\"\"\n",
-    "    fig, axes = plt.subplots(nrows=3, ncols=3, figsize=(18,8))\n",
-    "    for ax, col in zip(axes.flatten(), df.columns.tolist()):\n",
-    "        ax.hist(df[col], density=True, cumulative=-1)\n",
     "        if 'HR' in col:\n",
     "            ax.set_xscale('log')\n",
     "        ax.set_title('{} Histogram'.format(col))\n",
@@ -483,232 +450,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Helper function to calculate Root Mean Squared Error (RMSE), the primary evaluation metric for this project."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def evaluate_rmse(real, predicted):\n",
-    "    \"\"\"Calculates the Root Mean Square Error\n",
-    "     \n",
-    "     Parameters:\n",
-    "     real (ndarray) : actual values as a numpy array\n",
-    "     predicted (ndarray) : predicted values as a numpy array\n",
-    "     \n",
-    "     Returns: RMSE Accuracy as a float\n",
-    "     \n",
-    "    \"\"\"\n",
-    "    mse = np.square(np.subtract(real, predicted)).mean()\n",
-    "    return np.sqrt(mse)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Helper function to plot logs in a typical petrophysical layout"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def petro_plot(gr, resd, neut, den, pe, dtc, dts):\n",
-    "    \"\"\"\n",
-    "    Produces a typical petrophysical plot\n",
-    "    \n",
-    "    Parameters:\n",
-    "    gr (pandas.Series) : Gamma Ray curve as a pandas series\n",
-    "    resd (pandas.Series) : Deep Resistivity curve as a pandas series\n",
-    "    neut (pandas.Series) : Neutron Porosity curve as a pandas series\n",
-    "    den (pandas.Series) : Density curve as a pandas series\n",
-    "    pe (pandas.Series) : PE curve as a pandas series\n",
-    "    dtc (pandas.Series) : Compressional sonic curve as a pandas series\n",
-    "    dts (pandas.Series) : Shear sonic curve as a pandas series\n",
-    "    \n",
-    "    Returns : matplotlib.figure.Figure\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    fig = plt.figure(figsize=(20,12))\n",
-    "\n",
-    "    # GR\n",
-    "    ax1 = fig.add_subplot(1,5,1)\n",
-    "    ax1.plot(gr, gr.index, 'k', lw=1)\n",
-    "    ax1.invert_yaxis()\n",
-    "    ax1.set_xlabel('GR')\n",
-    "    ax1.set_ylabel('Sample no.')\n",
-    "    ax1.xaxis.tick_top()\n",
-    "    ax1.set_xlim([0, 300])\n",
-    "    ax1.set_xticks([0, 30, 60, 90, 120, 150, 180, 210, 240, 270, 300])\n",
-    "    ax1.xaxis.set_label_position('top')\n",
-    "\n",
-    "    # RD\n",
-    "    ax2 = fig.add_subplot(1,5,2)\n",
-    "    ax2.semilogx(resd, resd.index, 'b', lw=1)\n",
-    "    ax2.set_xlabel('HRD')\n",
-    "    ax2.invert_yaxis()\n",
-    "    ax2.xaxis.tick_top()\n",
-    "    ax2.xaxis.set_label_position('top')\n",
-    "\n",
-    "    # N-D\n",
-    "    ax3 = fig.add_subplot(1,5,3)\n",
-    "    ax3.plot(den, den.index, 'r', lw=1)\n",
-    "    ax3.xaxis.set_label_position('top')\n",
-    "    ax3.set_xlabel('ZDEN', labelpad=10, fontdict={'color':'r'})\n",
-    "    ax3.set_xlim(1.65, 2.65)\n",
-    "    ax3.invert_yaxis()\n",
-    "    ax3b = ax3.twiny()\n",
-    "    ax3b.plot(neut, neut.index, 'g', lw=1)\n",
-    "    ax3b.invert_xaxis()\n",
-    "    ax3b.set_xlabel('CNC', fontdict={'color':'g'})\n",
-    "    ax3b.set_xlim(0.6, 0.0)\n",
-    "    ax3b.xaxis.tick_top()\n",
-    "    ax3.xaxis.tick_top()\n",
-    "    ax3.set_xticks([1.65, 1.85, 2.05, 2.25, 2.45, 2.65])\n",
-    "    ax3.tick_params(axis='x', pad=35, top=True)\n",
-    "    ax3b.xaxis.set_label_position('top')\n",
-    "    ax3b.set_xticks([0.6, 0.48, 0.36, 0.24, 0.12, 0.0])\n",
-    "\n",
-    "    # PE\n",
-    "    ax4 = fig.add_subplot(1,5,4)\n",
-    "    ax4.plot(pe, pe.index, 'k', lw=1)\n",
-    "    ax4.set_xlabel('PE')\n",
-    "    ax4.invert_yaxis()\n",
-    "    ax4.xaxis.tick_top()\n",
-    "    ax4.xaxis.set_label_position('top')\n",
-    "\n",
-    "    # Sonic\n",
-    "    ax5 = fig.add_subplot(1,5,5)\n",
-    "    ax5.plot(dtc, dtc.index, 'b', lw=1)\n",
-    "    ax5.xaxis.set_label_position('top')\n",
-    "    ax5.set_xlabel('DTC', labelpad=10, fontdict={'color':'b'})\n",
-    "    ax5.set_xlim(50, 170)\n",
-    "    ax5.invert_xaxis()\n",
-    "    ax5.invert_yaxis()\n",
-    "    ax5b = ax5.twiny()\n",
-    "    ax5b.plot(dts, dts.index, 'r', lw=1)\n",
-    "    ax5b.invert_xaxis()\n",
-    "    ax5b.set_xlabel('DTS', fontdict={'color':'r'})\n",
-    "    ax5b.set_xlim(340, 100)\n",
-    "    ax5b.xaxis.tick_top()\n",
-    "    ax5.xaxis.tick_top()\n",
-    "    #ax5.set_xticks([170, 150, 130, 110, 90, 70, 50])\n",
-    "    ax5.set_xticks([230, 200, 170, 140, 110, 80, 50])\n",
-    "    ax5.tick_params(axis='x', pad=35, top=True)\n",
-    "    ax5b.xaxis.set_label_position('top')\n",
-    "    #ax5b.set_xticks([340, 300, 260, 220, 180, 140, 100])\n",
-    "    ax5b.set_xticks([460, 400, 340, 280, 220, 160, 100])\n",
-    "\n",
-    "    plt.tight_layout()\n",
-    "    return fig"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Helper function to plot RHOMAA-UMAA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_rhomaa_umaa(pe, dens, phi):\n",
-    "    \"\"\"Plot log data using RHOMAA-UMAA crossplot for mineralogy\n",
-    "    \n",
-    "    Parameters:\n",
-    "    pe (ndarray-like) : PE curve\n",
-    "    dens (ndarray-like) : Density curve\n",
-    "    phi (ndarray-like) : Neutron porosity curve\n",
-    "    color_var (optional) : Default 'None' will use index as color.  Option to pass in labels such as kmeans.labels_\n",
-    "    \n",
-    "    Returns:\n",
-    "    matplotlib.figure.Figure\n",
-    "    \"\"\"\n",
-    "    # First, create the endmember points as a dataframe\n",
-    "    index = ['Quartz', 'Calcite', 'Dolomite', 'Anhydrite', 'K-Feldspar']\n",
-    "    data = {\n",
-    "        'rhoma' : [2.65, 2.71, 2.87, 2.95, 2.54],\n",
-    "        'uma' : [4.82, 13.79, 8.98, 14.99, 7.29],\n",
-    "    }\n",
-    "    df = pd.DataFrame(data=data, index=index)\n",
-    "    \n",
-    "    # Second, calculate umaa & rhomaa for the input logs\n",
-    "    u = pe * dens\n",
-    "    phid = (2.65 - dens)/(2.65-1.)\n",
-    "    phit = (phid + phi)/2\n",
-    "    #umaa = u / (1 - phit)\n",
-    "    #umaa = (u - phit*0.5)/(1-phit)/2\n",
-    "    rhomaa = (dens - phit*1.)/(1-phit) # assume brackish pore fluid rhof = 1.1 g/cc\n",
-    "    umaa = (pe * rhomaa) / 2\n",
-    "    \n",
-    "    # Finally, create and return figure\n",
-    "    fig = plt.figure(figsize=(28,10))\n",
-    "    \n",
-    "    gs = fig.add_gridspec(1, 6)\n",
-    "    \n",
-    "    ax1 = fig.add_subplot(gs[0,:-3])\n",
-    "    im = ax1.scatter(umaa, rhomaa, s=10, c=umaa.index, marker='.', cmap='inferno', alpha=0.8)\n",
-    "    ax1.scatter(df['uma'], df['rhoma'], c='r', marker='D')\n",
-    "    for i, txt in enumerate(df.index.tolist()):\n",
-    "        ax1.annotate(txt, (df['uma'].iloc[i]+0.03, df['rhoma'].iloc[i]-0.02), weight='bold')\n",
-    "    ax1.plot(df['uma'].loc[['Quartz','Calcite']], df['rhoma'].loc[['Quartz', 'Calcite']], 'k')\n",
-    "    ax1.plot(df['uma'].loc[['Quartz', 'Dolomite']], df['rhoma'].loc[['Quartz', 'Dolomite']], 'k')\n",
-    "    ax1.plot(df['uma'].loc[['Dolomite','Calcite']], df['rhoma'].loc[['Dolomite','Calcite']], 'k')\n",
-    "    ax1.set_xlabel('UMAA (barns/cc)')\n",
-    "    #ax1.set_xlim(2,16)\n",
-    "    ax1.set_ylabel('RHOMAA (g/cc)')\n",
-    "    #ax1.set_ylim(2.3, 3.1)\n",
-    "    ax1.invert_yaxis()\n",
-    "    ax1.set_title('RHOMAA-UMAA Crossplot', fontdict={'fontsize':20, 'fontweight':'bold'})\n",
-    "    cbar = fig.colorbar(im, ax=ax1)\n",
-    "    cbar.ax.invert_yaxis()\n",
-    "    cbar.set_label('sample no', fontdict={'fontweight':'bold'})\n",
-    "    \n",
-    "    ax4 = fig.add_subplot(gs[0,3])\n",
-    "    ax4.plot(phit, phit.index, 'k', lw=2, label='phit')\n",
-    "    ax4.plot(phi, phi.index, 'r', lw=0.5, label='phin')\n",
-    "    ax4.plot(phid, phid.index, 'g', lw=0.5, label='phid')\n",
-    "    ax4.invert_yaxis()\n",
-    "    ax4.set_ylabel('sample no')\n",
-    "    ax4.invert_xaxis()\n",
-    "    ax4.set_xlabel('Phi')\n",
-    "    ax4.xaxis.tick_top()\n",
-    "    ax4.xaxis.set_label_position('top')\n",
-    "    ax4.legend(loc='best')\n",
-    "    \n",
-    "    ax5 = fig.add_subplot(gs[0,4], yticklabels=())\n",
-    "    ax5.plot(umaa, umaa.index)\n",
-    "    ax5.invert_yaxis()\n",
-    "    ax5.set_xlabel('UMAA')\n",
-    "    ax5.xaxis.tick_top()\n",
-    "    ax5.xaxis.set_label_position('top')\n",
-    "    \n",
-    "    ax6 = fig.add_subplot(gs[0,5], yticklabels=())\n",
-    "    ax6.plot(rhomaa, rhomaa.index)\n",
-    "    ax6.invert_yaxis()\n",
-    "    ax6.set_xlabel('RHOMAA')\n",
-    "    ax6.xaxis.tick_top()\n",
-    "    ax6.xaxis.set_label_position('top')\n",
-    "    \n",
-    "    return fig, rhomaa, umaa\n",
-    "        \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Helper function to plot Vp versus Vs using well known rock physics templates"
    ]
   },
@@ -828,58 +569,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Helper function to visually QC original vs. imputed data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_original_vs_imputed(df_original, df_imputed):\n",
-    "    \"\"\"Plots original and imputed log curves for visual QC\n",
-    "    \n",
-    "    Parameters:\n",
-    "    df_original (pandas.DataFrame) : Input data frame containing the well log curves, one log per column\n",
-    "    \n",
-    "    df_imputed (pandas.DataFrame) : Input data frame containing filtered log curves, one log per column\n",
-    "    \n",
-    "    Returns:\n",
-    "    matplotlib.figure.Figure\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # get the column names as a list, assumes col names are the same for each input data frame\n",
-    "    curve_names = df_original.columns.tolist()\n",
-    "    \n",
-    "    # build the figure\n",
-    "    fig, axes = plt.subplots(nrows=1, ncols=len(curve_names), sharey=True, figsize=(20,10))\n",
-    "    fig.suptitle('Original vs Imputed Data', fontsize=20)\n",
-    "    for ax, curve in zip(axes, curve_names):\n",
-    "        if curve in ['HRD', 'HRM']:\n",
-    "            ax.semilogx(df_imputed[curve], df_imputed.index, color='r', lw=0.5, label='imputed')\n",
-    "            ax.semilogx(df_original[curve], df_original.index, color='k', lw=2, label='original')\n",
-    "        else:\n",
-    "            ax.plot(df_imputed[curve], df_imputed.index, color='r', lw=0.5, label='imputed')\n",
-    "            ax.plot(df_original[curve], df_original.index, color='k', lw=2, label='original')\n",
-    "        if curve == 'CNC':\n",
-    "            ax.set_xlim(0.0, 1.0)\n",
-    "        if curve in ['DTC', 'DTS']:\n",
-    "            ax.set_title(curve, fontdict={'color':'r'})\n",
-    "            ax.invert_xaxis()\n",
-    "        else:\n",
-    "            ax.set_title(curve)\n",
-    "        ax.xaxis.tick_top()\n",
-    "        ax.invert_yaxis()\n",
-    "        ax.legend(loc='upper left')\n",
-    "    fig.text(0.04, 0.5, 'Sample', va='center', rotation='vertical', fontdict={'fontsize':20})\n",
-    "    return fig"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Helper function to find consecutive NaN values and the starting index number\n",
     "[Consecutive NaN larger than threshold](https://stackoverflow.com/questions46007776/consecutive-nan-larger-than-threshold-in-pandas-dataframe)"
    ]
@@ -955,7 +644,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scorer functions for multi-output scoring"
+    "**Scorer functions for multi-output scoring**\n",
+    "\n",
+    "We have multi-target output, so we need a custom scrorer.\n",
+    "\n",
+    "r2 is the standard accuracy score.\n",
+    "\n",
+    "rmse is the objective score to minimize"
    ]
   },
   {
