--- a/nb/SPWLA_PDDA_2020_Contest_BDowdell-v2.ipynb
+++ b/nb/SPWLA_PDDA_2020_Contest_BDowdell-v2.ipynb
@@ -1096,36 +1096,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "QC lithologies with RHOMAA-UMAA crossplot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig,_,_ = plot_rhomaa_umaa(df_clean['PE'].interpolate(limit_area='inside'), df_clean['ZDEN'].interpolate(limit_area='inside'), df_clean['CNC'].interpolate(limit_area='inside'))\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The filtering operation has done a good job of removing outliers while keeping the overall signal intact\n",
-    "\n",
-    "PE definitely has some bad values, as evident both on the log plot and the RHOMAA-UMAA transform crossplot.\n",
-    "\n",
     "**CAL seems a little suspect, though.  It seems unusual for CAL to increase at the bottom of the hole**\n",
     "\n",
-    "In fact, CAL and PE basically go bad at the same sample number, so it is likely they had a shared tool failure"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "In fact, CAL and PE basically go bad at the same sample number, so it is likely they had a shared tool failure\n",
+    "\n",
     "There are several ways to proceed.\n",
     "\n",
     "A few observations:\n",
