--- a/nb/SPWLA_PDDA_2020_Contest_BDowdell-v2.ipynb
+++ b/nb/SPWLA_PDDA_2020_Contest_BDowdell-v2.ipynb
@@ -785,7 +785,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a name=\"eda\"></a>4. Exploratory Data Analysis (EDA) & Cleaning\n",
+    "## <a name=\"eda\"></a>4) Exploratory Data Analysis (EDA) & Cleaning\n",
     "\n",
     "Back to [top](#top)"
    ]
