--- a/nb/SPWLA_PDDA_2020_Contest_BDowdell-v2.ipynb
+++ b/nb/SPWLA_PDDA_2020_Contest_BDowdell-v2.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,17 +91,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a name=\"sklearn-imports\"></a>1b. Sklearn Imports"
+    "### <a name=\"sklearn-imports\"></a>1b. Scikit-learn & Associated Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/bendowdell/anaconda3/envs/pdda/lib/python3.7/site-packages/sklearn/utils/deprecation.py:144: FutureWarning: The sklearn.metrics.classification module is  deprecated in version 0.22 and will be removed in version 0.24. The corresponding classes / functions should instead be imported from sklearn.metrics. Anything that cannot be imported from sklearn.metrics is now part of the private API.\n",
+      "  warnings.warn(message, FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# Preprocessing utilities\n",
-    "from sklearn.preprocessing import StandardScaler, RobustScaler\n",
+    "from sklearn.preprocessing import StandardScaler, RobustScaler, MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Feature Selection\n",
@@ -116,7 +125,7 @@
     "# Regression Models\n",
     "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
     "from sklearn.svm import SVR\n",
-    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor, AdaBoostRegressor\n",
     "\n",
     "# Dimensionality Reduction\n",
     "from sklearn.decomposition import PCA\n",
@@ -129,6 +138,9 @@
     "\n",
     "# Pipeline\n",
     "from sklearn.pipeline import make_pipeline\n",
+    "\n",
+    "# XGBoost\n",
+    "import xgboost as xgb #for XGBRegressor\n",
     "\n",
     "# Yellowbrick tools for model analysis\n",
     "from yellowbrick.features import Rank1D, Rank2D\n",
@@ -146,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
